--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -58,11 +58,11 @@
   </h1>
 
   <div
-    class="mb-6 mt-6 grid grid-cols-3 place-items-center gap-10 md:mt-8"
+    class="mb-6 mt-6 grid md:grid-cols-3 place-items-center gap-5 md:gap-10 md:mt-8"
   >
     {% for a in activities %}
     <div
-      class="flex h-40 w-64 flex-col rounded-2xl bg-color-bg-lighter px-8 py-5 shadow"
+      class="flex w-64 flex-col rounded-2xl bg-color-bg-lighter px-8 py-5 shadow"
     >
       <h3
         class="text-2xl text-color-primary text-center"
@@ -70,7 +70,7 @@
       >
         {{ a.day|date:'d/m' }}
       </h3>
-      <h4 class="mt-2 text-xl text-color-primary truncate text-ellipsis pb-4">{{ a.title }}</h4>
+      <h4 class="mt-2 text-xl text-color-primary truncate min-h-[1.5em]">{{ a.title }}</h4>
       <p class="text-gray-500">
         Matéria: {{ a.subject.name }} {% if user|has_role:'teacher' %}
         <br />
