--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -111,9 +111,9 @@
   <h1 class="mb-4 text-4xl font-semibold text-color-primary">
     Horários {% if user|has_role:'student' %} - {{ classroom }} {% endif %}
   </h1>
-  <article class="grid gap-20" :class="isTeacher || 'grid-cols-2'">
+  <article class="flex flex-col gap-5 lg:grid md:gap-20" :class="isTeacher || 'grid-cols-2'">
     <table
-      class="table-fixed border-separate border-spacing-2 rounded-2xl bg-zinc-300 p-4"
+      class="table-fixed border-separate border-spacing-2 rounded-2xl bg-zinc-300 p-4 overflow-x-scroll"
     >
       <thead class="bg-transparent">
         <tr>
@@ -240,7 +240,7 @@
               </div>
             </div>
             <template x-if="studentGroup != ''">
-              <div class="flex flex-col gap-3">
+              <div class="flex flex-col gap-3 overflow-x-hidden">
                 <div>
                   <label for="sl-subject">Matéria B:</label>
                   <select
